change cover and additional visual styling

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -28,6 +28,6 @@
         <file>img/hearts.svg</file>
         <file>img/spades.jpg</file>
         <file>img/spades.svg</file>
-        <file>img/turbo.jpg</file>
+        <file>img/arabesque.jpg</file>
     </qresource>
 </RCC>
